--- a/firstwelcome.ipynb
+++ b/firstwelcome.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNkoKLcbe4bnlbLuJ36L94+",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyPYIVPFqW++vVRJmg4053/B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,22 +30,24 @@
     {
       "cell_type": "code",
       "source": [
-        "print(\"welcome amany gamal in colab ... new experince\")"
+        "print(\"welcome amany gamal in colab ... new experince\")\n",
+        "print(5*4)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8nh6_a_TQ4jN",
-        "outputId": "b4c26c5c-f464-46b4-954b-5c387149981d"
+        "outputId": "1627bb50-8686-42cb-d145-a9e51317fb4a"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "welcome amany gamal in colab ... new experince\n"
+            "welcome amany gamal in colab ... new experince\n",
+            "20\n"
           ]
         }
       ]
